# fulgurate

./: .gitignore  Makefile  README  README.md  example.tsv  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
src/fulgurate/: __init__.py  _argopen.py  _card.py  cards.py  files.py  run.py
src/fulgurate/_cmd_line/: __init__.py  _args.py  _ttyio.py  import_cards.py  run.py  show_schedule.py
src/fulgurate/cmd_line/: _import.py  _run.py  _show_schedule.py
test/: pylintrc  test_card.py  test_cards_card.py  test_cards_files.py  test_cards_run.py  test_files.py  test_run.py
test/cmd_line/: _mock_ttyio.py  _shared.py  test_import.py  test_import_card.py  test_run.py  test_show_schedule.py
